--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "github-hosts"
-description = "Modify hosts to speed up GitHub access."
+name = "hosts"
+description = ""
 version = "0.1.1"
 authors = ["zu1k <i@lgf.im>"]
 repository = "https://github.com/zu1k/github-hosts"
-build = "build.rs"
 edition = "2018"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking"] }
 
-[target.'cfg(target_os="windows")'.build-dependencies]
-winres = "0.1"
+[workspace]
+members = [
+    "github-hosts",
+    "resolve-github"
+]
